--- a/CamoWorms(with comments).ipynb
+++ b/CamoWorms(with comments).ipynb
@@ -561,63 +561,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "01234567"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m     current_cost \u001b[38;5;241m=\u001b[39m loss_function(new_clew[i], image, new_clew)\n\u001b[1;32m      6\u001b[0m     temp_worm \u001b[38;5;241m=\u001b[39m fixed_random_worm(new_clew[i]\u001b[38;5;241m.\u001b[39mx, new_clew[i]\u001b[38;5;241m.\u001b[39my)\n\u001b[0;32m----> 7\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m current_cost \u001b[38;5;241m>\u001b[39m loss_function(temp_worm, image, new_clew):\n\u001b[1;32m      8\u001b[0m         new_clew[i] \u001b[38;5;241m=\u001b[39m temp_worm\n\u001b[1;32m      9\u001b[0m itr_cost_arr \u001b[38;5;241m=\u001b[39m []\n",
-      "Cell \u001b[0;32mIn[18], line 27\u001b[0m, in \u001b[0;36mloss_function\u001b[0;34m(worm, image, worms, w1, w2, w3, w4, w5)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n, point \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(curve_points):\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m point[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m240\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m point[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m720\u001b[39m:\n\u001b[0;32m---> 27\u001b[0m         average_colour \u001b[38;5;241m=\u001b[39m sample_colours_around_point_circle(apply_gaussian_blur(image, sigma\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.0\u001b[39m), point, worm\u001b[38;5;241m.\u001b[39mwidth)\n\u001b[1;32m     28\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m average_colour \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     29\u001b[0m             colours\u001b[38;5;241m.\u001b[39mappend(average_colour)\n",
-      "Cell \u001b[0;32mIn[15], line 24\u001b[0m, in \u001b[0;36mapply_gaussian_blur\u001b[0;34m(image, sigma)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mapply_gaussian_blur\u001b[39m(image, sigma\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.0\u001b[39m):\n\u001b[0;32m---> 24\u001b[0m     blurred_image \u001b[38;5;241m=\u001b[39m gaussian_filter(image, sigma\u001b[38;5;241m=\u001b[39msigma)\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m blurred_image\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/scipy/ndimage/_filters.py:379\u001b[0m, in \u001b[0;36mgaussian_filter\u001b[0;34m(input, sigma, order, output, mode, cval, truncate, radius, axes)\u001b[0m\n\u001b[1;32m    377\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(axes) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    378\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m axis, sigma, order, mode, radius \u001b[38;5;129;01min\u001b[39;00m axes:\n\u001b[0;32m--> 379\u001b[0m         gaussian_filter1d(\u001b[38;5;28minput\u001b[39m, sigma, axis, order, output,\n\u001b[1;32m    380\u001b[0m                           mode, cval, truncate, radius\u001b[38;5;241m=\u001b[39mradius)\n\u001b[1;32m    381\u001b[0m         \u001b[38;5;28minput\u001b[39m \u001b[38;5;241m=\u001b[39m output\n\u001b[1;32m    382\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/scipy/ndimage/_filters.py:277\u001b[0m, in \u001b[0;36mgaussian_filter1d\u001b[0;34m(input, sigma, axis, order, output, mode, cval, truncate, radius)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[38;5;66;03m# Since we are calling correlate, not convolve, revert the kernel\u001b[39;00m\n\u001b[1;32m    276\u001b[0m weights \u001b[38;5;241m=\u001b[39m _gaussian_kernel1d(sigma, order, lw)[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m--> 277\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m correlate1d(\u001b[38;5;28minput\u001b[39m, weights, axis, output, mode, cval, \u001b[38;5;241m0\u001b[39m)\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/scipy/ndimage/_filters.py:134\u001b[0m, in \u001b[0;36mcorrelate1d\u001b[0;34m(input, weights, axis, output, mode, cval, origin)\u001b[0m\n\u001b[1;32m    130\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mInvalid origin; origin must satisfy \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    131\u001b[0m                      \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-(len(weights) // 2) <= origin <= \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    132\u001b[0m                      \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m(len(weights)-1) // 2\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    133\u001b[0m mode \u001b[38;5;241m=\u001b[39m _ni_support\u001b[38;5;241m.\u001b[39m_extend_mode_to_code(mode)\n\u001b[0;32m--> 134\u001b[0m _nd_image\u001b[38;5;241m.\u001b[39mcorrelate1d(\u001b[38;5;28minput\u001b[39m, weights, axis, output, mode, cval,\n\u001b[1;32m    135\u001b[0m                       origin)\n\u001b[1;32m    136\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m output\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "13df75b5-1090-4974-9c04-ed8522a85816",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "for n in range(5):\n",
-    "    for j in range(100):\n",
+    "## Stage 2 Optimisation\n",
+    "total_itr = 100\n",
+    "total_try = 5\n",
+    "cost_history_sum = []\n",
+    "\n",
+    "for n in range(total_try):\n",
+    "    if n > (total_try*0.4):\n",
+    "        w1=0.2\n",
+    "        w2=1\n",
+    "        w3=0.4\n",
+    "        w4=0.5\n",
+    "        w5=0.7\n",
+    "    else:\n",
+    "        w1=0.3\n",
+    "        w2=0.5\n",
+    "        w3=0.4\n",
+    "        w4=0.5\n",
+    "        w5=0.7\n",
+    "    for j in range(total_itr):\n",
     "        print(j,end=\"\")\n",
     "        for i in range(len(new_clew)):\n",
-    "            current_cost = loss_function(new_clew[i], image, new_clew)\n",
+    "            current_cost = loss_function(new_clew[i], image, new_clew, w1, w2, w3, w4, w5)\n",
     "            temp_worm = fixed_random_worm(new_clew[i].x, new_clew[i].y)\n",
-    "            if current_cost > loss_function(temp_worm, image, new_clew):\n",
+    "            if current_cost > loss_function(temp_worm, image, new_clew, w1, w2, w3, w4, w5):\n",
     "                new_clew[i] = temp_worm\n",
     "        itr_cost_arr = []\n",
     "        for worm in new_clew:\n",
-    "            itr_cost_arr.append(loss_function(worm, image, new_clew))\n",
-    "        itr_cost_arr = np.array(itr_cost_arr)\n",
+    "            itr_cost_arr.append(loss_function(worm, image, new_clew, w1, w2, w3, w4, w5))\n",
     "        itr_cost_arr_total = np.sum(itr_cost_arr)\n",
-    "        itr_cost_arr_average = np.mean(itr_cost_arr)\n",
-    "        itr_sorted_indices = np.argsort(itr_cost_arr)\n",
-    "        # for worm in new_clew:\n",
-    "        #     if itr_cost_arr[itr_sorted_indices[i]] <\n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "        cost_history_sum.append(itr_cost_arr_total)\n",
     "    drawing_5 = Drawing(image)\n",
     "    drawing_6 = Drawing(image)\n",
     "    drawing_6.add_worms(new_clew)\n",
     "    for i, worm in enumerate(new_clew):\n",
     "        drawing_5.add_worms(worm)\n",
     "        drawing_5.add_dots(worm.intermediate_points(15), radius=1, color='grey')\n",
-    "        drawing_5.ax.text(worm.intermediate_points(1)[0][0], worm.intermediate_points(1)[0][1], str(loss_function(worm, image, new_clew))[0:4], color='red', fontsize=10)\n",
+    "        drawing_5.ax.text(worm.intermediate_points(1)[0][0], worm.intermediate_points(1)[0][1], str(loss_function(worm, image, new_clew, w1, w2, w3, w4, w5))[0:4], color='red', fontsize=10)\n",
     "    drawing_5.show()\n",
     "    drawing_6.show()\n",
     "        \n"
